tests/duarouter/alternatives/style2_input/errors/route/route_prob_false/errors.duarouter
Error: Attribute 'probability' in definition of route '!1' Invalid Number Format (double) xxx.
Quitting (on error).
